# dhancred-trading-app

./: .env.example  .gitignore  Cargo.toml
.github/workflows/: release.yml
config/: feeder.toml  strategy.toml
config/brokers/: angelone.toml  dbinternational.toml  delta.toml  fyers.toml
config/instruments/angelone/: base_instruments.csv
config/instruments/delta/: base_instruments.csv
config/instruments/fyers/: base_instruments.csv
deploy/systemd/: dhancred-trading-app.service
docs/: batman_strategy.md  strategy_v1_contract.md
plans/: dhanrekha_strategy.md  ema_pullback_scalp_strategy.md  exponential_edge_strategy.md  strategy_signal_instruction_contract.md
scripts/: build-linux-amd64.sh  deploy-oracle.sh  install-latest-release.sh
src/: admin.rs  config.rs  lib.rs  login_scheduler.rs  main.rs  master_scheduler.rs  notification.rs
src/adapters/: historical.rs  mod.rs
src/adapters/angelone/: auth.rs  latest_price_file.rs  live.rs  master.rs  mod.rs  runtime.rs  universe.rs
src/adapters/dbinternational/: auth.rs  latest_price_file.rs  live.rs  master.rs  mod.rs  runtime.rs  universe.rs
src/adapters/delta/: historical.rs  latest_price_file.rs  (+4 more)
src/backtest/: candle_feed.rs  engine.rs  mod.rs  report.rs  stores.rs
src/feeder/: candle_alignment.rs  catalog.rs  error.rs  event.rs  historical_candles.rs  market_session.rs  mod.rs  universe.rs
src/storage/: historical_candles.rs  mod.rs  strategy.rs
src/strategy/: diagnostics.rs  error.rs  history.rs  mod.rs  price_store.rs  runtime.rs  signal.rs  timeframes.rs
tests/: feeder_contract.rs
(+15 files in other folders)
