[package]
name = "dhancred-trading-app"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
