[package]
name = "dhancred-trading-app"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
chrono = "0.4"
dotenvy = "0.15"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
socketio_client = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
toml = "0.9"
tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }

[patch.crates-io]
socketio_client = { path = "vendor/socketio_client" }
